resolve shorten url
