# app/docs/swagger.json
@@ -243,7 +243,7 @@
                 }
             }
         },
-        "/api/v1/shorten/{id}": {
+        "/{id}": {
             "get": {
                 "description": "Redirect or Resolve Url.",
                 "consumes": [
@@ -259,7 +259,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Course ID",
+                        "description": "Shorten ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -277,7 +277,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/dto.AddShortenDto"
+                                            "type": "string"
                                         }
                                     }
                                 }
